--- a/Index.html
+++ b/Index.html
@@ -1,56 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE>
+<html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>personal website</title>
-        <link rel = "stylesheet" href="style.css">
+        <meta name="viewport" content="device-width, initial-scale=1.0">
+        <title>My Website</title>
+        <link rel="stylesheet" src="style.css">
     </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="contact.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+</html>
 
-        <div class="headpicture">
-            <img src="./Assets/web dev.jpg" alt="web dev" id="coverphoto">
-            <h1>My website</h1>
-        </div>
+<!-- doctype is decleration to the web page about the type and the version of html the code is written in <!DOCTYPE> is html 5 -->
 
+<!-- <html> element is the root element of html document it contains all the tags in the document -->
 
-        <div id="profile">
-            <img src="./Assets/OIP.jpg" alt="profile picture" id="profilepicture">
-            <h2>hello</h2>
-            <p><strong>Lorem</strong> Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-        </div>
-
-
-        <div class="skill">
-            <div id="skilldata">
-                <div class="skilldata-item">
-                    <h3>Design and Development</h3>
-                    <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                        Sections
-                        1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their
-                        exact
-                        original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-                </div>
-                <img src="./Assets/software devlopment.jpg" alt="software development" id="skillpicture">
-        
-                <div class="skilldata-item">
-                    <h3>Hot wings challenge</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                        and scrambled it to make a type specimen book.</p>
-                </div>
-                <img src="./Assets/images.jpg" alt="Hot wings challenge" id="skillpicture">
-            </div>
-        </div>
-        </body>
-        
-        </html>
+<!-- <head tag contains the meta information of the html document, it dose not contain any information that is visible in web page -->
