--- a/Index.html
+++ b/Index.html
@@ -24,5 +24,14 @@
         </div>
 
         <hr>
+
+        <div class="contact">
+            <h2>Get In Touch</h2>
+            <h3>If you love hot wings as much as I do.</h3>
+            <p>Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
+            <button>CONTACT ME</button>
+        </div>
+
+        
     </body>
 </html>
